--- a/src/css/PostPage.scss
+++ b/src/css/PostPage.scss
@@ -4,3 +4,19 @@
   justify-content: space-evenly;
   padding: 20px;
 }
+
+.title {
+  display: flex; 
+  flex-direction: row; 
+  align-items: center; 
+  justify-content: center;
+}
+
+@media screen and (max-width: 992px) {
+  .title {
+    display: flex; 
+    flex-direction: column; 
+    align-items: center; 
+    justify-content: center;
+  }
+}
