feat/ Adicionando classe css para o menu na estrutura do projeto

--- a/src/css/PostPage.css
+++ b/src/css/PostPage.css
@@ -10,6 +10,28 @@
   align-items: center;
   justify-content: center; }
 
+.vote-positive {
+  color: green; }
+
+.vote-negative {
+  color: red; }
+
+.space {
+  margin-left: 5px; }
+
+.title-post {
+  margin-top: 15px; }
+
+.form-post {
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
+
+.button-send-post {
+  margin-top: 15px !important;
+  margin-bottom: 10px !important; }
+
 @media screen and (max-width: 992px) {
   .title {
     display: flex;
